--- a/Meta_SGD_Sine.ipynb
+++ b/Meta_SGD_Sine.ipynb
@@ -14,7 +14,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "7b95d0f83717490ca4acd6265860c3cc": {
+        "01808e15fa2942b59fe3d86dca26f8c6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -29,14 +29,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_046a39cef3e0481f8c09b011f470f60e",
-              "IPY_MODEL_3ab67b2afea1467aafe7fec65620108a",
-              "IPY_MODEL_e50e1c4eeba149f1aa544ecedf35b951"
+              "IPY_MODEL_a266b599c8a64045af4e1371c441acae",
+              "IPY_MODEL_a27d7bcb57b0429fa320f173a4b96527",
+              "IPY_MODEL_257f37cc23394698ad61b5246053fec6"
             ],
-            "layout": "IPY_MODEL_ef9e511aebd843ca99c419df519f6803"
+            "layout": "IPY_MODEL_31e1aa8acc044bf0884652f6d17b8e95"
           }
         },
-        "046a39cef3e0481f8c09b011f470f60e": {
+        "a266b599c8a64045af4e1371c441acae": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -51,13 +51,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_655905a7f51242fe8935e6bc3134b2a2",
+            "layout": "IPY_MODEL_2cc88102522e4dafb30879dbd4ac17a7",
             "placeholder": "​",
-            "style": "IPY_MODEL_5a91a75ad9f54477b1539f1f93182031",
-            "value": "100%"
+            "style": "IPY_MODEL_9075a742646a4b5480afc74716ae6bcc",
+            "value": " 98%"
           }
         },
-        "3ab67b2afea1467aafe7fec65620108a": {
+        "a27d7bcb57b0429fa320f173a4b96527": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -73,15 +73,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_c4f891655ad14c439f36cbe4116a7141",
+            "layout": "IPY_MODEL_e2286d77cdfe4ab0ada3e719bb17b1de",
             "max": 60000,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_85e6aaabccef422f87b29de2a7915ca0",
+            "style": "IPY_MODEL_6fee27fb12a148759483f29734d65f4a",
             "value": 60000
           }
         },
-        "e50e1c4eeba149f1aa544ecedf35b951": {
+        "257f37cc23394698ad61b5246053fec6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -96,13 +96,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_13a32fde76fe4a47a1076d7014a32e37",
+            "layout": "IPY_MODEL_408a5b32e09a406285bbee581846fa6b",
             "placeholder": "​",
-            "style": "IPY_MODEL_4175e3e7c5684ec281a9670bfc360e49",
-            "value": " 60000/60000 [02:50&lt;00:00, 417.10it/s, loss=2.54]"
+            "style": "IPY_MODEL_702220a5e03d470499199837142838f7",
+            "value": " 60000/60000 [03:10&lt;00:00, 323.83it/s, loss=2.54]"
           }
         },
-        "ef9e511aebd843ca99c419df519f6803": {
+        "31e1aa8acc044bf0884652f6d17b8e95": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -154,7 +154,7 @@
             "width": null
           }
         },
-        "655905a7f51242fe8935e6bc3134b2a2": {
+        "2cc88102522e4dafb30879dbd4ac17a7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -206,7 +206,7 @@
             "width": null
           }
         },
-        "5a91a75ad9f54477b1539f1f93182031": {
+        "9075a742646a4b5480afc74716ae6bcc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -221,7 +221,7 @@
             "description_width": ""
           }
         },
-        "c4f891655ad14c439f36cbe4116a7141": {
+        "e2286d77cdfe4ab0ada3e719bb17b1de": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -273,7 +273,7 @@
             "width": null
           }
         },
-        "85e6aaabccef422f87b29de2a7915ca0": {
+        "6fee27fb12a148759483f29734d65f4a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -289,7 +289,7 @@
             "description_width": ""
           }
         },
-        "13a32fde76fe4a47a1076d7014a32e37": {
+        "408a5b32e09a406285bbee581846fa6b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -341,7 +341,7 @@
             "width": null
           }
         },
-        "4175e3e7c5684ec281a9670bfc360e49": {
+        "702220a5e03d470499199837142838f7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -410,7 +410,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xqFMA-rGcAFI",
-        "outputId": "be8e9a5c-edcd-4f25-cd17-692b5432f1e6"
+        "outputId": "6b21d5f7-e415-492e-951d-1030be9197ce"
       },
       "execution_count": 2,
       "outputs": [
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "jPyc6Ac2x_yv"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -540,10 +540,7 @@
         "Kprime = 10\n",
         "#outer_optim = adam(1e-3, eps=1e-04)\n",
         "outer_optim = sgd(beta)\n",
-        "outer_opt_state = outer_optim.init(eqx.filter(model, eqx.is_array))\n",
-        "\n",
-        "alpha_outer_optim = sgd(beta)\n",
-        "alpha_outer_opt_state = outer_optim.init(eqx.filter(model, eqx.is_array))\n",
+        "outer_opt_state = outer_optim.init(eqx.filter(model, eqx.is_array))  # Does it matter how we initialize the state of the optimizer? \n",
         "\n",
         "\n",
         "def task_update(model_alpha, A: Array, w: Array, key: PRNGKeyArray):\n",
@@ -562,7 +559,7 @@
         "    return model, train_prime, train_labels_prime\n",
         "\n",
         "@eqx.filter_jit\n",
-        "def maml_step(model, alpha, outer_opt_state, alpha_outer_opt_state, key: PRNGKeyArray):\n",
+        "def maml_step(model, alpha, outer_opt_state, key: PRNGKeyArray):\n",
         "    # Sample tasks for task(list)\n",
         "    keys = split(key,meta_sgd_batch_size)\n",
         "    A, w = get_batch_of_tasks(meta_sgd_batch_size, key)\n",
@@ -572,12 +569,12 @@
         "    updates, outer_opt_state = outer_optim.update(grads, outer_opt_state, (model, alpha))  \n",
         "    (model, alpha) = eqx.apply_updates((model, alpha), updates)  \n",
         "\n",
-        "    return loss, model, alpha, outer_opt_state, alpha_outer_opt_state"
+        "    return loss, model, alpha, outer_opt_state"
       ],
       "metadata": {
         "id": "dT31yUTLyAEz"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -586,7 +583,7 @@
         "# Meta train the model\n",
         "pbar = tqdm(random.split(MODEL_KEY,epochs),total=epochs)\n",
         "for key in pbar:\n",
-        "    loss, model, alpha, outer_opt_state, alpha_outer_opt_state = maml_step(model, alpha, outer_opt_state, alpha_outer_opt_state, key)  # = filter_jit(step)(model, opt_state)\n",
+        "    loss, model, alpha, outer_opt_state = maml_step(model, alpha, outer_opt_state, key)  # = filter_jit(step)(model, opt_state)\n",
         "    pbar.set_postfix({'loss': f'{loss.mean():.3}'})\n"
       ],
       "metadata": {
@@ -594,23 +591,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "7b95d0f83717490ca4acd6265860c3cc",
-            "046a39cef3e0481f8c09b011f470f60e",
-            "3ab67b2afea1467aafe7fec65620108a",
-            "e50e1c4eeba149f1aa544ecedf35b951",
-            "ef9e511aebd843ca99c419df519f6803",
-            "655905a7f51242fe8935e6bc3134b2a2",
-            "5a91a75ad9f54477b1539f1f93182031",
-            "c4f891655ad14c439f36cbe4116a7141",
-            "85e6aaabccef422f87b29de2a7915ca0",
-            "13a32fde76fe4a47a1076d7014a32e37",
-            "4175e3e7c5684ec281a9670bfc360e49"
+            "01808e15fa2942b59fe3d86dca26f8c6",
+            "a266b599c8a64045af4e1371c441acae",
+            "a27d7bcb57b0429fa320f173a4b96527",
+            "257f37cc23394698ad61b5246053fec6",
+            "31e1aa8acc044bf0884652f6d17b8e95",
+            "2cc88102522e4dafb30879dbd4ac17a7",
+            "9075a742646a4b5480afc74716ae6bcc",
+            "e2286d77cdfe4ab0ada3e719bb17b1de",
+            "6fee27fb12a148759483f29734d65f4a",
+            "408a5b32e09a406285bbee581846fa6b",
+            "702220a5e03d470499199837142838f7"
           ]
         },
         "id": "fdmeg8uCz68K",
-        "outputId": "9d89138d-f2d7-475b-bff2-c6021b832e8d"
+        "outputId": "eedfb444-6989-4772-e69e-31091a274218"
       },
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -621,7 +618,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "7b95d0f83717490ca4acd6265860c3cc"
+              "model_id": "01808e15fa2942b59fe3d86dca26f8c6"
             }
           },
           "metadata": {}
@@ -663,9 +660,9 @@
           "height": 430
         },
         "id": "NxMAvq6Y0CWZ",
-        "outputId": "45e33fb7-0db6-46dd-d2e2-436f2b01b76a"
+        "outputId": "419b9506-86bd-4a53-d059-afaae3c96d4d"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
